# ACProjects

./: README.md
CheckDataBaseConnection/: CMakeLists.txt  README.md
QT TextEditor/: README.md
QT TextEditor/Source/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
QTCheckDataBaseConnection/Source/: widget.cpp  widget.h  widget.ui
QTTextEditor/: README.md
QTTextEditor/Installer/: README.md
SendFileBoostAsio/: README.md  sendfile_client.cpp  sendfile_server.cpp
SimpleChatBoostAsio/: README.md  chat_client.cpp  chat_server.cpp
SimpleHTTPseverBoostAsio/: README.md  SimpleHTTPserver.cpp
math_client_server/: CMakeLists.txt  README.md
math_client_server/include/: client.h  server.h
math_client_server/src/: client.cpp  main_client.cpp  main_server.cpp  server.cpp
